# virtual-taktile

./: .gitignore  README.md
client/: .gitignore  README.md  package-lock.json  package.json  shadow-cljs.edn
client/docs/: data_structures.org
client/resources/public/: index.html
client/src/vtakt_client/: .#views.cljs  config.cljs  core.cljs  db.cljs  events.cljs  routes.cljs  sound.cljs  styles.cljs  subs.cljs  utils.cljs  views.cljs
client/src/vtakt_client/components/: keyboard.cljs
client/src/vtakt_client/keyboard/: chord.cljs  core.cljs  events.cljs  keyboard_controls.cljs  styles.cljs  subs.cljs  views.cljs
client/src/vtakt_client/midi/: core.cljs  events.cljs  midi_fx.cljs  styles.cljs  subs.cljs  views.cljs
client/src/vtakt_client/project/: core.cljs  events.cljs  styles.cljs  subs.cljs  views.cljs
client/src/vtakt_client/step_input/: styles.cljs  views.cljs
client/src/vtakt_client/utils/: core.cljs  specs.cljs
client/test/vtakt_client/: core_test.cljs  keyboard_test.cljs
client/test/vtakt_client/keyboard/: core_test.cljs  events_test.cljs  subs_test.cljs  views_test.cljs
sequence-player/: Cargo.toml  build.rs
sequence-player/doc/: example_requests.org
sequence-player/proto/: helloworld.proto  sequence.proto
sequence-player/src/: lib.rs  main.rs  sequencer.rs  server.rs  types.rs
server/: CHANGELOG.md  README.md  project.clj
server/doc/: example.org  intro.md  project_test_suite.org
server/src/vtakt_server/: core.clj  dev.clj
server/test/vtakt_server/: core_test.clj
synth/: README.md  morse.c
(+11 files in other folders)
